--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>AHJ-Diploma</title>
   </head>
   <body>
